# ai-engineering-fordham

./: homework-1.ipynb  homework-2.ipynb  homework-3.ipynb  homework-4.ipynb  pyproject.toml
homework/: homework-1.ipynb  pyproject.toml
temp/: project_embeddings.npy
