[project]
name = "ai-engineering-fordham"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv.workspace]
members = [
    "homework",
]
