[project]
name = "ai-engineering-fordham"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.59.0",
    "ipykernel>=7.1.0",
    "litellm>=1.81.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pystemmer>=3.0.0",
    "sentence-transformers>=5.2.2",
    "typing>=3.10.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv.workspace]
members = [
    "homework",
]
